tests/ui/reflection/reflection_methods_in_runtime_code.stderr
error: comptime fns can only be called at compile time
  --> $DIR/reflection_methods_in_runtime_code.rs:7:5
   |
LL |     std::any::TypeId::of::<[u8; usize::MAX]>().trait_info_of::<dyn Trait>();
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: aborting due to 1 previous error

